fixed navbar overlap

--- a/css/theme.css
+++ b/css/theme.css
@@ -9528,7 +9528,7 @@ a.skip-link {
   .admin-bar .fixed-top {
     top: 46px; } }
 
-.admin-bar #content {
+#content {
   padding-top: 32px; }
 
 /*
