--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -14,6 +14,6 @@
  }
 }
 
-.admin-bar #content {
+#content {
   padding-top: 32px;
 }
